src/libqevent.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QWheelEvent__
{
	DefaultDeltasPerStep = 120,
}
[AllowDuplicates]
public enum QPlatformSurfaceEvent__SurfaceEventType
{
	SurfaceCreated = 0,
	SurfaceAboutToBeDestroyed = 1,
}
[AllowDuplicates]
public enum QContextMenuEvent__Reason
{
	Mouse = 0,
	Keyboard = 1,
	Other = 2,
}
[AllowDuplicates]
public enum QInputMethodEvent__AttributeType
{
	TextFormat = 0,
	Cursor = 1,
	Language = 2,
	Ruby = 3,
	Selection = 4,
}
[AllowDuplicates]
public enum QScrollEvent__ScrollState
{
	ScrollStarted = 0,
	ScrollUpdated = 1,
	ScrollFinished = 2,
}
public struct QInputEvent
{
	[LinkName("QInputEvent_new")]
	public static extern void* QInputEvent_new(int64 typeVal, QInputDevice m_dev);
	[LinkName("QInputEvent_new2")]
	public static extern void* QInputEvent_new2(int64 typeVal, QInputDevice m_dev, int64 modifiers);
	[LinkName("QInputEvent_Clone")]
	public static extern QInputEvent QInputEvent_Clone(void* c_this);
	[LinkName("QInputEvent_Device")]
	public static extern QInputDevice QInputEvent_Device(void* c_this);
	[LinkName("QInputEvent_DeviceType")]
	public static extern int64 QInputEvent_DeviceType(void* c_this);
	[LinkName("QInputEvent_Modifiers")]
	public static extern int64 QInputEvent_Modifiers(void* c_this);
	[LinkName("QInputEvent_SetModifiers")]
	public static extern void QInputEvent_SetModifiers(void* c_this, int64 modifiers);
	[LinkName("QInputEvent_Timestamp")]
	public static extern uint64 QInputEvent_Timestamp(void* c_this);
	[LinkName("QInputEvent_SetTimestamp")]
	public static extern void QInputEvent_SetTimestamp(void* c_this, uint64 timestamp);
}
public struct QPointerEvent
{
	[LinkName("QPointerEvent_new")]
	public static extern void* QPointerEvent_new(int64 typeVal, QPointingDevice dev);
	[LinkName("QPointerEvent_new2")]
	public static extern void* QPointerEvent_new2(int64 typeVal, QPointingDevice dev, int64 modifiers);
	[LinkName("QPointerEvent_new3")]
	public static extern void* QPointerEvent_new3(int64 typeVal, QPointingDevice dev, int64 modifiers, QEventPoint[] points);
	[LinkName("QPointerEvent_Clone")]
	public static extern QPointerEvent QPointerEvent_Clone(void* c_this);
	[LinkName("QPointerEvent_PointingDevice")]
	public static extern QPointingDevice QPointerEvent_PointingDevice(void* c_this);
	[LinkName("QPointerEvent_PointerType")]
	public static extern int64 QPointerEvent_PointerType(void* c_this);
	[LinkName("QPointerEvent_SetTimestamp")]
	public static extern void QPointerEvent_SetTimestamp(void* c_this, uint64 timestamp);
	[LinkName("QPointerEvent_PointCount")]
	public static extern int32 QPointerEvent_PointCount(void* c_this);
	[LinkName("QPointerEvent_Point")]
	public static extern QEventPoint QPointerEvent_Point(void* c_this, int32 i);
	[LinkName("QPointerEvent_Points")]
	public static extern QEventPoint[] QPointerEvent_Points(void* c_this);
	[LinkName("QPointerEvent_PointById")]
	public static extern QEventPoint QPointerEvent_PointById(void* c_this, int32 id);
	[LinkName("QPointerEvent_AllPointsGrabbed")]
	public static extern bool QPointerEvent_AllPointsGrabbed(void* c_this);
	[LinkName("QPointerEvent_IsBeginEvent")]
	public static extern bool QPointerEvent_IsBeginEvent(void* c_this);
	[LinkName("QPointerEvent_IsUpdateEvent")]
	public static extern bool QPointerEvent_IsUpdateEvent(void* c_this);
	[LinkName("QPointerEvent_IsEndEvent")]
	public static extern bool QPointerEvent_IsEndEvent(void* c_this);
	[LinkName("QPointerEvent_AllPointsAccepted")]
	public static extern bool QPointerEvent_AllPointsAccepted(void* c_this);
	[LinkName("QPointerEvent_SetAccepted")]
	public static extern void QPointerEvent_SetAccepted(void* c_this, bool accepted);
	[LinkName("QPointerEvent_ExclusiveGrabber")]
	public static extern QObject QPointerEvent_ExclusiveGrabber(void* c_this, QEventPoint point);
	[LinkName("QPointerEvent_SetExclusiveGrabber")]
	public static extern void QPointerEvent_SetExclusiveGrabber(void* c_this, QEventPoint point, QObject exclusiveGrabber);
	[LinkName("QPointerEvent_ClearPassiveGrabbers")]
	public static extern void QPointerEvent_ClearPassiveGrabbers(void* c_this, QEventPoint point);
	[LinkName("QPointerEvent_AddPassiveGrabber")]
	public static extern bool QPointerEvent_AddPassiveGrabber(void* c_this, QEventPoint point, QObject grabber);
	[LinkName("QPointerEvent_RemovePassiveGrabber")]
	public static extern bool QPointerEvent_RemovePassiveGrabber(void* c_this, QEventPoint point, QObject grabber);
}
public struct QSinglePointEvent
{
	[LinkName("QSinglePointEvent_Clone")]
	public static extern QSinglePointEvent QSinglePointEvent_Clone(void* c_this);
	[LinkName("QSinglePointEvent_Button")]
	public static extern int64 QSinglePointEvent_Button(void* c_this);
	[LinkName("QSinglePointEvent_Buttons")]
	public static extern int64 QSinglePointEvent_Buttons(void* c_this);
	[LinkName("QSinglePointEvent_Position")]
	public static extern QPointF QSinglePointEvent_Position(void* c_this);
	[LinkName("QSinglePointEvent_ScenePosition")]
	public static extern QPointF QSinglePointEvent_ScenePosition(void* c_this);
	[LinkName("QSinglePointEvent_GlobalPosition")]
	public static extern QPointF QSinglePointEvent_GlobalPosition(void* c_this);
	[LinkName("QSinglePointEvent_IsBeginEvent")]
	public static extern bool QSinglePointEvent_IsBeginEvent(void* c_this);
	[LinkName("QSinglePointEvent_IsUpdateEvent")]
	public static extern bool QSinglePointEvent_IsUpdateEvent(void* c_this);
	[LinkName("QSinglePointEvent_IsEndEvent")]
	public static extern bool QSinglePointEvent_IsEndEvent(void* c_this);
	[LinkName("QSinglePointEvent_ExclusivePointGrabber")]
	public static extern QObject QSinglePointEvent_ExclusivePointGrabber(void* c_this);
	[LinkName("QSinglePointEvent_SetExclusivePointGrabber")]
	public static extern void QSinglePointEvent_SetExclusivePointGrabber(void* c_this, QObject exclusiveGrabber);
}
public struct QEnterEvent
{
	[LinkName("QEnterEvent_new")]
	public static extern void* QEnterEvent_new(QPointF localPos, QPointF scenePos, QPointF globalPos);
	[LinkName("QEnterEvent_new2")]
	public static extern void* QEnterEvent_new2(QPointF localPos, QPointF scenePos, QPointF globalPos, QPointingDevice device);
	[LinkName("QEnterEvent_Clone")]
	public static extern QEnterEvent QEnterEvent_Clone(void* c_this);
	[LinkName("QEnterEvent_Pos")]
	public static extern QPoint QEnterEvent_Pos(void* c_this);
	[LinkName("QEnterEvent_GlobalPos")]
	public static extern QPoint QEnterEvent_GlobalPos(void* c_this);
	[LinkName("QEnterEvent_X")]
	public static extern int32 QEnterEvent_X(void* c_this);
	[LinkName("QEnterEvent_Y")]
	public static extern int32 QEnterEvent_Y(void* c_this);
	[LinkName("QEnterEvent_GlobalX")]
	public static extern int32 QEnterEvent_GlobalX(void* c_this);
	[LinkName("QEnterEvent_GlobalY")]
	public static extern int32 QEnterEvent_GlobalY(void* c_this);
	[LinkName("QEnterEvent_LocalPos")]
	public static extern QPointF QEnterEvent_LocalPos(void* c_this);
	[LinkName("QEnterEvent_WindowPos")]
	public static extern QPointF QEnterEvent_WindowPos(void* c_this);
	[LinkName("QEnterEvent_ScreenPos")]
	public static extern QPointF QEnterEvent_ScreenPos(void* c_this);
}
public struct QMouseEvent
{
	[LinkName("QMouseEvent_new")]
	public static extern void* QMouseEvent_new(int64 typeVal, QPointF localPos, int64 button, int64 buttons, int64 modifiers);
	[LinkName("QMouseEvent_new2")]
	public static extern void* QMouseEvent_new2(int64 typeVal, QPointF localPos, QPointF globalPos, int64 button, int64 buttons, int64 modifiers);
	[LinkName("QMouseEvent_new3")]
	public static extern void* QMouseEvent_new3(int64 typeVal, QPointF localPos, QPointF scenePos, QPointF globalPos, int64 button, int64 buttons, int64 modifiers);
	[LinkName("QMouseEvent_new4")]
	public static extern void* QMouseEvent_new4(int64 typeVal, QPointF localPos, QPointF scenePos, QPointF globalPos, int64 button, int64 buttons, int64 modifiers, int64 source);
	[LinkName("QMouseEvent_new5")]
	public static extern void* QMouseEvent_new5(int64 typeVal, QPointF localPos, int64 button, int64 buttons, int64 modifiers, QPointingDevice device);
	[LinkName("QMouseEvent_new6")]
	public static extern void* QMouseEvent_new6(int64 typeVal, QPointF localPos, QPointF globalPos, int64 button, int64 buttons, int64 modifiers, QPointingDevice device);
	[LinkName("QMouseEvent_new7")]
	public static extern void* QMouseEvent_new7(int64 typeVal, QPointF localPos, QPointF scenePos, QPointF globalPos, int64 button, int64 buttons, int64 modifiers, QPointingDevice device);
	[LinkName("QMouseEvent_new8")]
	public static extern void* QMouseEvent_new8(int64 typeVal, QPointF localPos, QPointF scenePos, QPointF globalPos, int64 button, int64 buttons, int64 modifiers, int64 source, QPointingDevice device);
	[LinkName("QMouseEvent_Clone")]
	public static extern QMouseEvent QMouseEvent_Clone(void* c_this);
	[LinkName("QMouseEvent_Pos")]
	public static extern QPoint QMouseEvent_Pos(void* c_this);
	[LinkName("QMouseEvent_GlobalPos")]
	public static extern QPoint QMouseEvent_GlobalPos(void* c_this);
	[LinkName("QMouseEvent_X")]
	public static extern int32 QMouseEvent_X(void* c_this);
	[LinkName("QMouseEvent_Y")]
	public static extern int32 QMouseEvent_Y(void* c_this);
	[LinkName("QMouseEvent_GlobalX")]
	public static extern int32 QMouseEvent_GlobalX(void* c_this);
	[LinkName("QMouseEvent_GlobalY")]
	public static extern int32 QMouseEvent_GlobalY(void* c_this);
	[LinkName("QMouseEvent_LocalPos")]
	public static extern QPointF QMouseEvent_LocalPos(void* c_this);
	[LinkName("QMouseEvent_WindowPos")]
	public static extern QPointF QMouseEvent_WindowPos(void* c_this);
	[LinkName("QMouseEvent_ScreenPos")]
	public static extern QPointF QMouseEvent_ScreenPos(void* c_this);
	[LinkName("QMouseEvent_Source")]
	public static extern int64 QMouseEvent_Source(void* c_this);
	[LinkName("QMouseEvent_Flags")]
	public static extern int64 QMouseEvent_Flags(void* c_this);
}
public struct QHoverEvent
{
	[LinkName("QHoverEvent_new")]
	public static extern void* QHoverEvent_new(int64 typeVal, QPointF scenePos, QPointF globalPos, QPointF oldPos);
	[LinkName("QHoverEvent_new2")]
	public static extern void* QHoverEvent_new2(int64 typeVal, QPointF pos, QPointF oldPos);
	[LinkName("QHoverEvent_new3")]
	public static extern void* QHoverEvent_new3(int64 typeVal, QPointF scenePos, QPointF globalPos, QPointF oldPos, int64 modifiers);
	[LinkName("QHoverEvent_new4")]
	public static extern void* QHoverEvent_new4(int64 typeVal, QPointF scenePos, QPointF globalPos, QPointF oldPos, int64 modifiers, QPointingDevice device);
	[LinkName("QHoverEvent_new5")]
	public static extern void* QHoverEvent_new5(int64 typeVal, QPointF pos, QPointF oldPos, int64 modifiers);
	[LinkName("QHoverEvent_new6")]
	public static extern void* QHoverEvent_new6(int64 typeVal, QPointF pos, QPointF oldPos, int64 modifiers, QPointingDevice device);
	[LinkName("QHoverEvent_Clone")]
	public static extern QHoverEvent QHoverEvent_Clone(void* c_this);
	[LinkName("QHoverEvent_Pos")]
	public static extern QPoint QHoverEvent_Pos(void* c_this);
	[LinkName("QHoverEvent_PosF")]
	public static extern QPointF QHoverEvent_PosF(void* c_this);
	[LinkName("QHoverEvent_IsUpdateEvent")]
	public static extern bool QHoverEvent_IsUpdateEvent(void* c_this);
	[LinkName("QHoverEvent_OldPos")]
	public static extern QPoint QHoverEvent_OldPos(void* c_this);
	[LinkName("QHoverEvent_OldPosF")]
	public static extern QPointF QHoverEvent_OldPosF(void* c_this);
}
